# hands-on-lab-neo4j-and-azure

./: .env.sample  .gitignore  AURA.md  CLAUDE.md  CLEAN.md  CONFIG.txt  Discussion - Questions and Next Steps.md  FIX.md  FIX_V23.md  GUIDE_DEV_CONTAINERS.md  ID_BEST_PRACTICES.md  LICENSE  LLM_FTW.md  LOAD.md  OPTIMAL.md  Questions and Next Steps.md  README.md  REQS.md  RESTRUCTURE.md  SCREENSHOTS.md  SYNC.md  TEMPLATE.md  TOKEN_MYSTERIES.md  azure.yaml  explore_schema.py  pyproject.toml  setup_env.py  test_mcp_auth.py
.devcontainer/: devcontainer.json
Lab 0 - Sign In/: README.md
Lab 0 - Signup for Azure/: README.md
Lab 1 - Deploy Neo4j/: README.md  README_v2.md
Lab 1 - Neo4j Aura Signup/: README.md
Lab 2  - (Please skip this lab)/: README.md
Lab 2 - Connect to Neo4j/: README.md
Lab 3 - Importing Data/: README.md
Lab 3 - Moving Data/: README.md
Lab 4 - Exploration/: README.md
Lab 5 - Aura Agents/: .env.example  .mcp.json.template  README.md  mcp_setup.md
Lab 5 - AzureML/: README.md
Lab 5 - Parsing Data/: 1_cypher.ipynb  README.md  parse-extract-load.ipynb  parse-extract-load.jpynb  parsing-data.ipynb
Lab 6 - Chatbot/: README.md  chatbot.ipynb
Lab 6 - Graph Data Science/: 1_create_embedding.ipynb  2_automl_embedding.ipynb  README.md
Lab 7 - Cleanup/: README.md
Lab 7 - Context Providers/: 03_fulltext_context_provider.ipynb  README.md
Lab 7 - Semantic Search/: 01-text-embedding.ipynb  02-semantic-search.ipynb  README.md
Lab 8 - Agent Memory/: 01_memory_context_provider.ipynb  04_reasoning_memory.ipynb
Lab 9 - Advanced/: 03_text2cypher_agent.ipynb
Lab_0_Sign_In/: README.md
Lab_10_Retrievers/: 02_entity_extraction.ipynb  03_full_dataset.ipynb  README.md
Lab_11_Hybrid_Search/: 01_fulltext_search.ipynb  02_hybrid_search.ipynb  README.md
Lab_1_Aura_Setup/: AURA_AGENTS.md  EXPLORE.md  (+2 more)
(+412 files in other folders)
