[project]
name = "neo4j-azure-ai-workshop"
version = "0.1.0"
description = "Hands-on lab for Neo4j and Microsoft Foundry"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "azure-identity>=1.19.0",
    "azure-ai-projects>=1.0.0b11",
    "azure-ai-inference>=1.0.0b7",
    "python-dotenv",
    "pydantic-settings>=2.0.0",
    "neo4j>=5.0.0",
    # Using local fork for testing - replace with "neo4j-graphrag>=1.10.0" for production
    "neo4j-graphrag @ file:///Users/ryanknight/projects/neo4j-graphrag-python",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "ipykernel>=6.0.0",
    "nbstripout>=0.8.0",
    "agent-framework-core>=1.0.0b251120",
    "agent-framework-azure-ai>=1.0.0b251120",
]

[tool.uv]
package = false
